# Vortex_WiFi_Valve

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  global_var.c  global_var.h  mqtt_client.c  mqtt_client.h  mqtt_client_fn.c  mqtt_client_fn.h  softap_sta.c  state_offline.c  state_offline.h  time_func.c  time_func.h  websocket_server.c  websocket_server.h
main/mqtt_fn/: mqtt_client_fn.c  mqtt_client_fn.h  mqtt_state_fn.c  mqtt_state_fn.h
main/valve_fn/: led_indicators.c  limit_switch.c  limit_switch.h  valve_motor.c  valve_motor.h  valve_process.c  valve_process.h
main/websocket_fn/: websocket_server_fn.c  websocket_state_fn.c  websocket_state_fn.h
